Create List/Recyclerview to show all previous Saved location from Firebase database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <include layout="@layout/toolbar"
+        android:id="@+id/app_bar"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rvLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
         tools:context=".MainActivity"
         tools:ignore="ExtraText">
 
@@ -23,25 +29,25 @@
             android:layout_height="match_parent"
             tools:context=".MapsActivity" />
 
-<!--        <com.mancj.materialsearchbar.MaterialSearchBar-->
-<!--            android:id="@+id/searchBar"-->
-<!--            style="@style/MaterialSearchBarLight"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="24dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:layout_marginEnd="24dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:mt_hint="Search a place"-->
-<!--            app:mt_maxSuggestionsCount="10"-->
-<!--            app:mt_menuDividerEnabled="false"-->
-<!--            app:mt_menuIconDrawable="@drawable/ic_menus"-->
-<!--            app:mt_menuIconUseTint="true"-->
-<!--            app:mt_navIconEnabled="true"-->
-<!--            app:mt_placeholder="Search a place"-->
-<!--            app:mt_speechMode="false" />-->
+        <!--        <com.mancj.materialsearchbar.MaterialSearchBar-->
+        <!--            android:id="@+id/searchBar"-->
+        <!--            style="@style/MaterialSearchBarLight"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="24dp"-->
+        <!--            android:layout_marginTop="16dp"-->
+        <!--            android:layout_marginEnd="24dp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent"-->
+        <!--            app:mt_hint="Search a place"-->
+        <!--            app:mt_maxSuggestionsCount="10"-->
+        <!--            app:mt_menuDividerEnabled="false"-->
+        <!--            app:mt_menuIconDrawable="@drawable/ic_menus"-->
+        <!--            app:mt_menuIconUseTint="true"-->
+        <!--            app:mt_navIconEnabled="true"-->
+        <!--            app:mt_placeholder="Search a place"-->
+        <!--            app:mt_speechMode="false" />-->
 
         <ImageView
             android:id="@+id/addLocationBtn"
@@ -59,4 +65,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
